improved mobile responsiveness, added hover effects and animations

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                             fill="#FFF" fill-rule="nonzero" />
                     </svg>
                     <nav class="nav">
+                        <button aria-expanded="false" aria-label="mobile nav" class="button button--mobileNav"><svg
+                                width="32" height="18" xmlns="http://www.w3.org/2000/svg">
+                                <g fill="#FFF" fill-rule="evenodd">
+                                    <path d="M0 0h32v2H0zM0 8h32v2H0zM0 16h32v2H0z" />
+                                </g>
+                            </svg></button>
                         <ul class="ul ul--leftNav">
                             <li id="productMenuTitle" class="li li--leftNav li--productMenu li--hasMenu">
                                 <a aria-expanded="false" tabindex="1" class="a a--ul--leftNav" href="">
@@ -37,8 +43,10 @@
                             </li>
                             <li class="li li--leftNav li--hidden--main">
                                 <ul id="productMenu" class="ul--hidden">
-                                    <li class="li--hidden"><a tabindex="2" class="a a--hidden" href="">Overview</a></li>
-                                    <li class="li--hidden"><a tabindex="3" class="a a--hidden" href="">Pricing</a></li>
+                                    <li class="li--hidden"><a tabindex="2" class="a a--hidden" href="">Overview</a>
+                                    </li>
+                                    <li class="li--hidden"><a tabindex="3" class="a a--hidden" href="">Pricing</a>
+                                    </li>
                                     <li class="li--hidden"><a tabindex="4" class="a a--hidden" href="">Marketplace</a>
                                     </li>
                                     <li class="li--hidden"><a tabindex="5" class="a a--hidden" href="">Features</a>
@@ -55,11 +63,13 @@
                                     <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" />
                                 </svg>
                             </li>
-                            <li aria-expanded="false" class="li li--leftNav li--hidden--main ">
+                            <li class="li li--leftNav li--hidden--main ">
                                 <ul class="ul--hidden">
-                                    <li class="li--hidden"><a tabindex="8" class="a a--hidden" href="">About</a></li>
+                                    <li class="li--hidden"><a tabindex="8" class="a a--hidden" href="">About</a>
+                                    </li>
                                     <li class="li--hidden"><a tabindex="9" class="a a--hidden" href="">Team</a></li>
-                                    <li class="li--hidden"><a tabindex="10" class="a a--hidden" href="">Blog</a></li>
+                                    <li class="li--hidden"><a tabindex="10" class="a a--hidden" href="">Blog</a>
+                                    </li>
                                     <li id="last--li--hidden" class="li--hidden"><a class="a a--hidden" tabindex="11"
                                             href="">Careers</a>
                                     </li>
@@ -74,7 +84,8 @@
                             </li>
                             <li class="li li--leftNav li--hidden--main">
                                 <ul class="ul--hidden">
-                                    <li class="li--hidden"><a tabindex="13" class="a a--hidden" href="">Contact</a></li>
+                                    <li class="li--hidden"><a tabindex="13" class="a a--hidden" href="">Contact</a>
+                                    </li>
                                     <li class="li--hidden"><a tabindex="14" class="a a--hidden" href="">Newsletter</a>
                                     </li>
                                     <li id="last--li--hidden" class="li--hidden"><a tabindex="15" class="a a--hidden"
@@ -83,8 +94,9 @@
                                 </ul>
                             </li>
                         </ul>
-                        <ul aria-expanded="false" class="ul ul--rightNav">
-                            <li class="li li--rightNav"><a tabindex="16" class="a a--rightNav" href="">Login</a></li>
+                        <ul class="ul ul--rightNav">
+                            <li class="li li--rightNav"><a tabindex="16" class="a a--rightNav" href="">Login</a>
+                            </li>
                             <li class="li li--rightNav"><a tabindex="17" class="a a--rightNav whiteFilled" href="">Sign
                                     Up</a></li>
                         </ul>
