--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                             </svg></button>
                         <ul class="ul ul--leftNav">
                             <li id="productMenuTitle" class="li li--leftNav li--productMenu li--hasMenu">
-                                <a aria-expanded="false" tabindex="1" class="a a--ul--leftNav" href="">
-                                    Product</a>
+                                <span aria-expanded="false" tabindex="1" class="a a--ul--leftNav" href="">
+                                    Product</span>
                                 <svg id="first--arrow" class="svg svg--arrow" xmlns="http://www.w3.org/2000/svg"
                                     width="10" height="7">
                                     <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" />
@@ -57,7 +57,7 @@
                                 </ul>
                             </li>
                             <li id="companyMenu" class="li li--leftNav li--companyMenu li--hasMenu">
-                                <a aria-expanded="false" tabindex="7" class="a a--ul--leftNav" href="">Company</a>
+                                <span aria-expanded="false" tabindex="7" class="a a--ul--leftNav" href="">Company</span>
                                 <svg id="second--arrow" class="svg svg--arrow" xmlns="http://www.w3.org/2000/svg"
                                     width="10" height="7">
                                     <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" />
@@ -76,7 +76,8 @@
                                 </ul>
                             </li>
                             <li id="connectMenu" class="li li--leftNav li--hasMenu li--connectMenu">
-                                <a aria-expanded="false" tabindex="12" class="a a--ul--leftNav" href="">Connect</a>
+                                <span aria-expanded="false" tabindex="12" class="a a--ul--leftNav"
+                                    href="">Connect</span>
                                 <svg id="third--arrow" class="svg svg--arrow" xmlns="http://www.w3.org/2000/svg"
                                     width="10" height="7">
                                     <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" />
