responsive image test

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -154,8 +155,8 @@
                     </article>
             </div>
             <img class="img img--productDesc"
-                srcset="./images/illustration-editor-mobile.svg 725w, ./images/illustration-editor-desktop.svg 925w"
-                sizes="(max-width:725px) 725px, 925px">
+                srcset="./images/illustration-editor-mobile.svg 406w, ./images/illustration-editor-desktop.svg 925w"
+                sizes="(max-width:725px) 406px, 925px">
         </section>
         <section class="section section--infrastructure">
             <div class="block block--sectionWrapper">
