--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             </svg></button>
                         <ul class="ul ul--leftNav">
                             <li id="productMenuTitle" class="li li--leftNav li--productMenu li--hasMenu">
-                                <button aria-expanded="false" class="a a--ul--leftNav" href="">
+                                <button aria-expanded="false" class="a a--ul--leftNav" aria-controls="menu-1">
                                     Product <svg id="first--arrow" class="svg svg--arrow"
                                         xmlns="http://www.w3.org/2000/svg" width="10" height="7">
                                         <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75"
@@ -46,7 +46,7 @@
                                     </svg></button>
 
                             </li>
-                            <li class="li li--leftNav li--hidden--main">
+                            <li id="menu-1" class="li li--leftNav li--hidden--main">
                                 <ul id="productMenu" class="ul--hidden">
                                     <li class="li--hidden"><a class="a a--hidden" href="">Overview</a>
                                     </li>
@@ -56,46 +56,46 @@
                                     </li>
                                     <li class="li--hidden"><a class="a a--hidden" href="">Features</a>
                                     </li>
-                                    <li id="last--li--hidden" class="li--hidden"><a class="a a--hidden"
+                                    <li data-type="last--li--hidden" class="li--hidden"><a class="a a--hidden"
                                             href="">Integration</a>
                                     </li>
                                 </ul>
                             </li>
                             <li id="companyMenu" class="li li--leftNav li--companyMenu li--hasMenu">
-                                <button aria-expanded="false" class="a a--ul--leftNav" href="">Company <svg
-                                        id="second--arrow" class="svg svg--arrow" xmlns="http://www.w3.org/2000/svg"
+                                <button aria-expanded="false" aria-controls="menu-2" class="a a--ul--leftNav">Company
+                                    <svg id="second--arrow" class="svg svg--arrow" xmlns="http://www.w3.org/2000/svg"
                                         width="10" height="7">
                                         <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75"
                                             d="M1 1l4 4 4-4" />
                                     </svg></button>
                             </li>
-                            <li class="li li--leftNav li--hidden--main ">
+                            <li id="menu-2" class="li li--leftNav li--hidden--main ">
                                 <ul class="ul--hidden">
                                     <li class="li--hidden"><a class="a a--hidden" href="">About</a>
                                     </li>
                                     <li class="li--hidden"><a class="a a--hidden" href="">Team</a></li>
                                     <li class="li--hidden"><a class="a a--hidden" href="">Blog</a>
                                     </li>
-                                    <li id="last--li--hidden" class="li--hidden"><a class="a a--hidden"
+                                    <li data-type="last--li--hidden" class="li--hidden"><a class="a a--hidden"
                                             href="">Careers</a>
                                     </li>
                                 </ul>
                             </li>
                             <li id="connectMenu" class="li li--leftNav li--hasMenu li--connectMenu">
-                                <button aria-expanded="false" class="a a--ul--leftNav" href="">Connect
+                                <button aria-expanded="false" aria-controls="menu-3" class="a a--ul--leftNav">Connect
                                     <svg id="third--arrow" class="svg svg--arrow" xmlns="http://www.w3.org/2000/svg"
                                         width="10" height="7">
                                         <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75"
                                             d="M1 1l4 4 4-4" />
                                     </svg></button>
                             </li>
-                            <li class="li li--leftNav li--hidden--main">
+                            <li id="menu-3" class="li li--leftNav li--hidden--main">
                                 <ul class="ul--hidden">
                                     <li class="li--hidden"><a class="a a--hidden" href="">Contact</a>
                                     </li>
                                     <li class="li--hidden"><a class="a a--hidden" href="">Newsletter</a>
                                     </li>
-                                    <li id="last--li--hidden" class="li--hidden"><a class="a a--hidden"
+                                    <li data-type="last--li--hidden" class="li--hidden"><a class="a a--hidden"
                                             href="">Linkedin</a>
                                     </li>
                                 </ul>
