--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                             fill="#FFF" fill-rule="nonzero" />
                     </svg>
                     <nav class="nav">
-                        <button aria-expanded="false" aria-controls="main navigation" class="button button--mobileNav">
+                        <button aria-expanded="false" aria-controls="mobile-menus mobile-sign-up"
+                            class="button button--mobileNav">
                             <svg stroke="white" class="hamburger" width="48" height="45" viewbox="0 0 100 100">
                                 <path class="path" fill="none" stroke-width="10" stroke-linecap="round"
                                     stroke-linejoin="round"
@@ -36,7 +37,7 @@
 
                                 </path>
                             </svg></button>
-                        <ul class="ul ul--leftNav">
+                        <ul id="mobile-menus" class="ul ul--leftNav">
                             <li id="productMenuTitle" class="li li--leftNav li--productMenu li--hasMenu">
                                 <button aria-expanded="false" class="a a--ul--leftNav" aria-controls="menu-1">
                                     Product <svg id="first--arrow" class="svg svg--arrow"
@@ -101,7 +102,7 @@
                                 </ul>
                             </li>
                         </ul>
-                        <ul class="ul ul--rightNav">
+                        <ul id="mobile-sign-up" class="ul ul--rightNav">
                             <li class="li li--rightNav"><a class="a a--rightNav" href="">Login</a>
                             </li>
                             <li class="li li--rightNav"><a class="a a--rightNav whiteFilled" href="">Sign
